Fix colors and alignment

--- a/assets/css/static-main.scss
+++ b/assets/css/static-main.scss
@@ -25,7 +25,7 @@ article h2{
 }
 
 .faq-question{
-    color: #FDB81E
+    color: #FAD980
 }
 
 .subnav .blueberry-lime-link:active:before,
